--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/244225374.js"></script>
+  <!-- End of HubSpot Embed Code -->
 </body>
 
 </html>
