chore: add meta description for SEO

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GTM360 - Revenue OS</title>
+  <meta name="description"
+    content="GTM-360 is the Operating System for Revenue. Orchestrate your Go-To-Market strategy with autonomous agents and AI-driven intelligence." />
   <!-- RB2B Tracking -->
   <script>
     !function (key) {
